[gd_scene load_steps=3 format=3 uid="uid://b5rrn4x35obc0"]

[ext_resource type="Script" path="res://file/config/config___section.gd" id="1_6jshd"]
[ext_resource type="PackedScene" uid="uid://cpuuwp2254hm2" path="res://addons/godot_play_tool/helper/helper_code.tscn" id="2_h3uyc"]

[node name="config___section" type="Node2D"]
script = ExtResource("1_6jshd")

[node name="Label4Sections" type="Label" parent="."]
offset_left = 914.0
offset_top = 126.0
offset_right = 954.0
offset_bottom = 149.0
theme_override_colors/font_color = Color(0, 1, 0, 1)

[node name="Label4Source" type="Label" parent="."]
offset_left = 562.0
offset_top = 122.0
offset_right = 602.0
offset_bottom = 145.0

[node name="helper_code" parent="." instance=ExtResource("2_h3uyc")]
offset_top = 122.0
offset_bottom = 573.0
